// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`titresONF > teste la récupération des données pour l'ONF 1`] = `
{
  "dateCARM": "",
  "dateCompletudePTMG": "2022-03-10",
  "dateReceptionONF": "",
  "enAttenteDeONF": true,
  "id": Any<String>,
  "nom": "titre1",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "typeId": "arm",
}
`;

exports[`titresONF > teste la récupération des données pour l'ONF 2`] = `
{
  "dateCARM": "",
  "dateCompletudePTMG": "",
  "dateReceptionONF": "",
  "enAttenteDeONF": false,
  "id": Any<String>,
  "nom": "titre2",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "typeId": "arm",
}
`;

exports[`titresPTMG > teste la récupération des données pour le PTMG 1`] = `
{
  "enAttenteDePTMG": false,
  "id": Any<String>,
  "nom": "titre1",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "typeId": "arm",
}
`;

exports[`titresPTMG > teste la récupération des données pour le PTMG 2`] = `
{
  "enAttenteDePTMG": true,
  "id": Any<String>,
  "nom": "titre2",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "nom": "Mon Entreprise",
    },
  ],
  "typeId": "arm",
}
`;
